Fix tab is invisible when the next stop is close

This patch fixes tab width to be at least the half of the space width,
so that it is always recognizable.

Before this patch, the minimum was 1/64px, which is too narrow to
recognize a tab is there. It also helps the stability for rounding
errors.

This patch also moves ShapeResult::createForTabulationCharacters() from
HarfBuzzShaper.cpp to ShapeResult.cpp.

BUG=635717

Review-Url: https://codereview.chromium.org/2331783002
Cr-Commit-Position: refs/heads/master@{#417905}

Former-commit-id: 371ed3a69920683cccd0431ce9ce7c95ea324845